Add 'about us' tab, remove header

--- a/templates/about.html
+++ b/templates/about.html
@@ -13,8 +13,8 @@
 {%- endfor %}
 {# info #}
 <div class="indent about">
-  <h2>About Us</h2>
   <ul id="tab-buttons">
+    <li class="t3-0 tab-buttons-active">About Us</li>
     <li class="t3-3">Companion Platforms</li>
     <li class="t3-2">Ed Resources</li>
     <li class="t3-1">Credits</li>
