--- a/sass/master.scss
+++ b/sass/master.scss
@@ -255,7 +255,7 @@ body {
 
 .overlay {
   z-index: 100;
-  position: absolute;
+  position: fixed;
   top: 0; bottom: 0; left: 0; right: 0;
   background: rgba(0, 0, 0, 0.7);
   transition: opacity 500ms;
