Make the composition auto-start

--- a/sass/master.scss
+++ b/sass/master.scss
@@ -330,6 +330,10 @@ div#symphony-copy {
   h2 {
     margin-bottom: 40px;
   }
+  p {
+    cursor: pointer;
+    color: black;
+  }
 }
 
 div#symphony-landing {
