Use interactjs, remove btn, autostart animals
Still not perfect is the act of dragging, to be the fix of the next
commit

--- a/sass/master.scss
+++ b/sass/master.scss
@@ -371,12 +371,8 @@ div#symphony-player {
     width: 90%;
   }
 
-  .watch {
-    display: block;
-    margin-top: 350px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 50px;
+  p.center {
+    margin-top: 400px;
   }
 
   a {
