--- a/templates/symphony.html
+++ b/templates/symphony.html
@@ -42,5 +42,7 @@
     </div>
   </div>
 </div>
+<div id='copyCircle'>
+</div>
 <script type="text/javascript" src="/dist/js/symphony.js"></script>
 {% endblock %}
