Fix cursor on icons

--- a/sass/master.scss
+++ b/sass/master.scss
@@ -399,6 +399,7 @@ div#symphony-player {
     position: relative;
     left: -25px;
     cursor: -webkit-grab;
+    cursor: grab;
   }
   .sliderIcon {
     width: 148px;
@@ -406,6 +407,7 @@ div#symphony-player {
     left: -29px;
     top: -29px;
     cursor: -webkit-grab;
+    cursor: grab;
   }
 
   div#iconContainer {
@@ -564,6 +566,7 @@ div#copyCircle {
   }
   .indent.black h2 {
     -webkit-margin-before: 0;
+    margin-before: 0;
   }
   div#guidenav {
     width: 40%;
