--- a/templates/base.html
+++ b/templates/base.html
@@ -27,6 +27,7 @@
         <li id="aboutNavLink"><a href="/about">About Us</a></li> 
         <li><a href="/swamp-symphony">Swamp Symphony</a></li>
         <li><a href="/guides">Guides</a></li> 
+        <li><a href="/swamp-slider">Swamp Slider</a></li>
       </ul>
     </nav>
 
