--- a/templates/landing.html
+++ b/templates/landing.html
@@ -7,22 +7,11 @@
 
 {% block body %}
 {{ image('0.0.jpg') }}
-<div class="black indent">
+<div id="first-copy">
   <p class="two-thirds">{{ home['0.2'] }}</p>
   <div class="controls">
     <button onclick="playFilm('trailer')" class="watch">Watch the trailer <i class="fas fa-play-circle"></i></button>
   </div>
-</div>
-<div class="indent">
-  <h2>{{ home['0.5'] }}</h2>
-  <p class="center">Use the slider to see change over time</p>
-  <br/>
-  <div class="juxtapose">
-    <img src="/dist/images/1904.png" class="full-size" />
-    <img src="/dist/images/2011.png" class="full-size" />
-  </div>
-  <script src="https://cdn.knightlab.com/libs/juxtapose/latest/js/juxtapose.min.js"></script>
-  <link rel="stylesheet" href="https://cdn.knightlab.com/libs/juxtapose/latest/css/juxtapose.css">
 </div>
 <div class="overlay trailer">
   <button onclick='closeOverlay("trailer")'>Close X</button>
