--- a/sass/master.scss
+++ b/sass/master.scss
@@ -15,6 +15,7 @@ ul {
 }
 
 nav, footer {
+  z-index: 500;
   background-color: $black;
   padding: 0 5%;
   ul {
@@ -95,7 +96,7 @@ div.indent {
   background-color: $white;
   &.about {
 
-    min-height: 800px;
+    min-height: 300px;
 
     ul {
       list-style-type: disc;
@@ -138,13 +139,22 @@ div.black {
   }
 }
 
+#play-trailer {
+  font-size: 80px;
+  position: absolute;
+  top: 30%;
+  left: calc(50% - 40px);
+  z-index: 5;
+  color: rgba($white, 0.8);
+}
+
 div#first-copy {
   background-color: rgba($black, 0.5);
   position: absolute;
   bottom: 80px;
-  width: 70%;
+  width: 90%;
   color: white;
-  padding: 50px 5% 0 5%;
+  padding: 25px 5% 25px 5%;
 }
 
 .full-size {
@@ -452,9 +462,51 @@ div#copyCircle {
   background-color: black;
 }
 
+
+@media (max-width: 1350px) {
+  nav li {
+
+    border-top: 1px solid $grey;
+
+    &#dropdown {
+      display: initial;
+      position: absolute;
+      top: 15px;
+      right: 11%;
+      color: $nepal;
+      border-top: none;
+      font-size: 20px;
+    }
+
+    float: none;
+    display: none;
+
+    &:first-child {
+      float: none;
+      display: initial;
+
+      a {
+        width: 20%;
+        display: block;
+      }
+    }
+
+    &.hamburged {
+      display: initial;
+      margin: 0;
+    }
+    a {
+      margin: 0;
+    }
+  }
+}
+
 @media (min-width: 1200px) {
   //$background_large_color: darken($everglade, 10%);
   $background_large_color: $black;
+  div#first-copy {
+    width: 70%;
+  }
 
   .main {
     background-color: $background_large_color;
@@ -467,7 +519,7 @@ div#copyCircle {
     padding: 0 10%;
     margin-bottom: 5px;
     li#aboutNavLink {
-      margin-right: 15px;
+      //margin-right: 15px;
     }
   }
   footer {
@@ -518,35 +570,20 @@ div#copyCircle {
 }
 
 @media (max-width: 767px) {
-  nav li {
 
-    border-top: 1px solid $grey;
-
-    &#dropdown {
-      display: initial;
-      position: absolute;
-      top: 15px;
-      right: 20px;
-      color: $nepal;
-      border-top: none;
-      font-size: 20px;
-    }
-
-    float: none;
-    display: none;
-
-    &:first-child {
-      float: none;
-      display: initial;
-    }
-
-    &.hamburged {
-      display: initial;
-    }
-    a {
-      margin: 0;
-    }
+  nav li#dropdown {
+    right: 20px;
   }
+
+  #play-trailer {
+    font-size: 36px;
+    left: calc(50% - 18px);
+    top: 30%;
+  }
+  div#first-copy {
+    position: static;
+  }
+
   //turn off the email
   footer li:first-child {
     max-width: 15px;
@@ -584,7 +621,7 @@ div#copyCircle {
     left: -50%;
   }
   div.indent.about {
-    min-height: 500px;
+    min-height: 300px;
     ul#tab-buttons {
       margin-bottom: 10px;
       li {
@@ -620,6 +657,7 @@ div#copyCircle {
   div#symphony-player {
     display: none;
   }
+
 }
 
 @media (max-width: 900px) and (min-width: 768px) {
