--- a/sass/master.scss
+++ b/sass/master.scss
@@ -26,7 +26,6 @@ nav, footer {
 
   li {
     float: right;
-
     a {
       letter-spacing: 3px;
       display: block;
@@ -48,10 +47,19 @@ nav, footer {
         margin-left: 0;
       }
     }
-    &#aboutNavLink {
-      a {
-        padding-right: 0;
-        margin-right: 0;
+  }
+
+  div#burgable {
+    z-index: 501;
+    width: 80%;
+    float: right;
+
+    li {
+      float: right;
+      display: inline-block;
+
+      &:first-child a {
+        margin-left: 30px;
       }
     }
   }
@@ -326,15 +334,6 @@ div#guidenav {
 
 div#symphony-copy {
 
-  /*
-  button {
-    font-size: 18px;
-    text-align: right;
-    &:hover {
-      color: $grey;
-    }
-  }
-  */
   .controls {
     position: relative;
     top: 0;
@@ -463,42 +462,66 @@ div#copyCircle {
 }
 
 
-@media (max-width: 1350px) {
-  nav li {
-
-    border-top: 1px solid $grey;
-
-    &#dropdown {
-      display: initial;
-      position: absolute;
-      top: 15px;
-      right: 11%;
-      color: $nepal;
-      border-top: none;
-      font-size: 20px;
-    }
-
-    float: none;
-    display: none;
-
-    &:first-child {
-      float: none;
-      display: initial;
-
-      a {
-        width: 20%;
+@media (max-width: 1380px) {
+  nav {
+    div#burgable {
+      background-color: $black;
+      display: none;
+      
+      &.hamburged {
         display: block;
+        position: absolute;
+        right: 10%;
+        width: 250px;
+        li {
+          display: block;
+          width: 250px;
+        }
       }
     }
+    li {
 
-    &.hamburged {
-      display: initial;
-      margin: 0;
-    }
-    a {
-      margin: 0;
+      border-top: 1px solid $grey;
+
+      &#dropdown {
+        display: initial;
+        position: absolute;
+        top: 15px;
+        right: 11%;
+        color: $nepal;
+        border-top: none;
+        font-size: 20px;
+      }
+
+      float: none;
+      display: none;
+
+      &:first-child {
+        float: none;
+        display: initial;
+
+        a {
+          display: block;
+        }
+      }
+
+      a {
+        margin: 0;
+      }
     }
   }
+}
+
+@media (max-width: 1200px) {
+  nav {
+      div#burgable.hamburged {
+      right: 5%;
+    }
+    li#dropdown {
+      right: 5%;
+    }
+  }
+
 }
 
 @media (min-width: 1200px) {
@@ -518,9 +541,6 @@ div#copyCircle {
   nav {
     padding: 0 10%;
     margin-bottom: 5px;
-    li#aboutNavLink {
-      //margin-right: 15px;
-    }
   }
   footer {
     padding: 0 10%;
@@ -571,8 +591,17 @@ div#copyCircle {
 
 @media (max-width: 767px) {
 
-  nav li#dropdown {
-    right: 20px;
+  nav {
+    div#burgable.hamburged {
+      position: static;
+      width: 100%;
+      li {
+        width: 100%;
+      }
+    }
+    li#dropdown {
+      right: 20px;
+    }
   }
 
   #play-trailer {
