--- a/templates/base.html
+++ b/templates/base.html
@@ -24,10 +24,12 @@
       <ul>
         <li id="logo"><a href="/"><img src="/dist/images/logo.png"/></a></li>
         <li id="dropdown" onclick="toggleMenu()"><i class="fas fa-bars"></i></li>
-        <li id="aboutNavLink"><a href="/about">About Us</a></li> 
-        <li><a href="/swamp-slider">Swamp Slider</a></li>
-        <li><a href="/swamp-symphony">Swamp Symphony</a></li>
-        <li><a href="/guides">Guides</a></li> 
+        <div id="burgable">
+          <li id="aboutNavLink"><a href="/about">About Us</a></li> 
+          <li><a href="/swamp-slider">Swamp Slider</a></li>
+          <li><a href="/swamp-symphony">Swamp Symphony</a></li>
+          <li><a href="/guides">Guides</a></li> 
+        </div>
       </ul>
     </nav>
 
