Give real closing buttons to overlays

--- a/templates/guides.html
+++ b/templates/guides.html
@@ -16,7 +16,7 @@
     {{ guide(guides[i]) }}
   {% endfor %}
   <div class="overlay" id="map">
-    <button onclick='closeOverlay()'>Close X</button>
+    <button onclick='closeOverlay()'>Close <i class="fas fa-times"></i></button>
     <div class="popup" id="mapPopup">
     </div>
   </div>
