--- a/templates/landing.html
+++ b/templates/landing.html
@@ -10,12 +10,9 @@
 <button id="play-trailer" onclick="playFilm('trailer')"><i class="fas fa-play-circle"></i></button>
 <div id="first-copy">
   <p>{{ home['0.2'] }}</p>
-  <!-- <div class="controls">
-    <button onclick="playFilm('trailer')" class="watch">Watch the trailer <i class="fas fa-play-circle"></i></button>
-  </div> -->
 </div>
 <div class="overlay trailer">
-  <button onclick='closeOverlay("trailer")'>Close X</button>
+  <button onclick='closeOverlay("trailer")'>Close <i class="fas fa-times"></i></button>
   <div class="popup">
     {{ home.video.html | safe }}
   </div>
