--- a/sass/master.scss
+++ b/sass/master.scss
@@ -14,6 +14,10 @@ ul {
   list-style-type: none;
 }
 
+nav {
+  border-bottom: 6px solid $everglade;
+}
+
 nav, footer {
   z-index: 500;
   background-color: $black;
@@ -41,6 +45,7 @@ nav, footer {
       background-color: #111;
     }
     &:first-child {
+      border-top: none;
       float: left;
       a {
         padding-left: 0;
@@ -541,7 +546,6 @@ div#copyCircle {
   }
   nav {
     padding: 0 10%;
-    margin-bottom: 5px;
   }
   footer {
     padding: 0 10%;
@@ -566,7 +570,7 @@ div#copyCircle {
     overflow-y: scroll;
     h1 {
       margin-top: 0;
-      color: black;
+      color: white;
     }
 
     button {
