Small changes to spacing and content

--- a/templates/guides.html
+++ b/templates/guides.html
@@ -22,7 +22,7 @@
   </div>
 </div>
 <div id="guidenav">
-  <h1><i>Select your guide</i></h1>
+  <h1>Select your guide</h1>
   {% for i in range(1, guides.length + 1) %}
   <button onclick="selectGuide('{{guides[i-1].slug}}')">
     <img src="/dist/images/1.{{i}}_Guide_Thumbnail.jpg" class="thumb"/>
