--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,8 @@
   <body>
     <nav>
       <ul>
-        <li id="logo"><a href="/"><img src="/dist/images/logo.png"/></a></li>
+      <!--<li id="logo"><a href="/"><img src="/dist/images/logo.png"/></a></li> -->
+        <li id="logo"><a href="/">SwampScapes</a></li>
         <li id="dropdown" onclick="toggleMenu()"><i class="fas fa-bars"></i></li>
         <div id="burgable">
           <li id="aboutNavLink"><a href="/about">About Us</a></li> 
