--- a/templates/macros.html
+++ b/templates/macros.html
@@ -17,7 +17,7 @@
         <li><button onclick='openMap({{g.mapdata | dump}})'><i class="fas fa-map-marker-alt"></i> Map</button></li>
         <li class="nav-toggler"><button onclick='toggleGuideNav()'>
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 87 83"><defs><style>.cls-2,.cls-3{fill:none;stroke-miterlimit:10;}.cls-2{stroke-width:8px;}.cls-3{stroke-width:7px;}</style></defs><path class="cls-2 nepal" d="M11.66,55.5a37.49,37.49,0,1,0,.2-15" transform="translate(-3 -7)"/><line class="nepal cls-3" y1="41" x2="46" y2="41"/><line class="cls-3 nepal" x1="27.5" y1="23.5" x2="47.5" y2="43.5"/><line class="nepal cls-3" x1="28" y1="58" x2="47.5" y2="38.5"/></svg>
-            Select Your Guides</button></li>
+            Select Your Guide</button></li>
       </ul>
     </div>
   </div>
