--- a/templates/symphony.html
+++ b/templates/symphony.html
@@ -12,7 +12,7 @@
 
 {% block body %}
 <div class="indent">
-  <h2>SWAMP SYMPHONY</h2>
+  <h2 class="center">SWAMP SYMPHONY</h2>
   <div id="Content"><div id="sliders"></div></div>
   <p id="buffer" class="center">{{ symphony['2.1'] }}</p>
   <div id="soundIcons">
