--- a/sass/_guides.scss
+++ b/sass/_guides.scss
@@ -1,24 +1,68 @@
+div#guidebody {
+  display: inline-block;
+  width: 78%;
+}
+
 div#guidenav {
-  position: absolute;
-  top: 0;
-  left: 100%;
-  width: 20%;
-  padding: 5%;
+  display: inline-block;
+  float: right;
+  width: 10%;
   h1 {
     color: white;
     letter-spacing: 2px;
     font-size: 20px;
   }
   .thumb {
-    width: 90%;
+    width: 100%;
     margin: 5px 0;
-    border: 1px solid $white;
+    opacity: 0.75;
+    transition: opacity 0.25s ease;
+    -webkit-transition: opacity 0.25s ease;
+    &:hover {
+      opacity: 1;
+    }
+  }
+}
+
+.controls {
+  display: inline-block;
+  float: right;
+  width: 33%;
+  position: relative;
+  top: -20px;
+  li {
+    min-width: 200px;
+    margin-top: 10px;
+    text-align: left;
+  }
+
+  i.fas {
+    font-size: 20px;
+    margin-right: 5px;
+    color: $everglade;
+
+    &.fa-map-marker-alt {
+      margin-left: 2.5px;
+      margin-right: 7px;
+    }
+  }
+}
+
+
+@media (max-width: 1200px) {
+  div#guidebody {
+    margin-left: 5%;
+  }
+  div#guidenav {
+    margin-right: 5%;
+    h1 {
+      text-align: center;
+    }
   }
 }
 
 @media (min-width: 1200px) {
   div#guidebody {
-    width: 70%;
     .nav-toggler {
       display: none;
     }
@@ -28,40 +72,54 @@ div#guidenav {
   }
 
   div#guidenav {
-    margin-top: 30px;
-    left: 70%;
-    padding: 3% 1%;
     width: 20%;
-    overflow-y: scroll;
+    margin: 1%;
+
     h1 {
-      margin-top: 0;
+      margin-top: 5px;
       color: white;
+      text-align:right;
     }
 
-    button {
+    .thumb {
       width: 49%;
       display: inline-block;
-      margin: 5px 0;
       padding: 0;
-      img.thumb {
-        margin: 0;
-        border: 1px solid $black;
-      }
+      margin: 0;
     }
   }
 }
 
 @media (max-width: 767px) {
+  div#guidebody {
+    width: 100%;
+    margin: 0;
+  }
+  .controls {
+    float: none;
+    position: static;
+    width: 100%;
+  }
   .guide-controls {
-    button {
-      margin: 0;
-      display: inline-block;
-    }
+    width: 100%;
+    display: block;
+    padding: 0;
     li {
-      min-width: 200px;
+      min-width: unset;
+      margin: 0;
+      width: 32.6%;
+      display: inline-block;
     }
   }
   div#guidenav {
-    width: 40%;
+    width: 90%;
+    margin-left: 5%;
+    float: none;
+    display: inline-block;
+    .thumb {
+      margin: 0;
+      width: 32.6%;
+      display: inline-block;
+    }
   }
 }
