--- a/sass/_guides.scss
+++ b/sass/_guides.scss
@@ -1,6 +1,14 @@
 div#guidebody {
   display: inline-block;
   width: 78%;
+
+  h2 {
+    color: white;
+    font-size: 34px;
+  }
+  div.indent.black {
+    width: 110%;
+  }
 }
 
 div#guidenav {
@@ -16,10 +24,12 @@ div#guidenav {
     width: 100%;
     margin: 5px 0;
     opacity: 0.75;
-    transition: opacity 0.25s ease;
-    -webkit-transition: opacity 0.25s ease;
+
     &:hover {
       opacity: 1;
+    }
+    &:first-child {
+      margin-top: 0;
     }
   }
 }
@@ -49,12 +59,14 @@ div#guidenav {
 }
 
 
-@media (max-width: 1200px) {
+@media (max-width: 1199px) {
   div#guidebody {
-    margin-left: 5%;
+    margin-left: 2%;
+    width: 86%;
   }
   div#guidenav {
-    margin-right: 5%;
+    margin-right: 2%;
+    width: 9.1%;
     h1 {
       text-align: center;
     }
@@ -69,11 +81,15 @@ div#guidenav {
     button {
       text-align: left;
     }
+    div.indent.black {
+      width: 137%;
+    }
   }
 
   div#guidenav {
     width: 20%;
     margin: 1%;
+    margin-top: 0;
 
     h1 {
       margin-top: 5px;
@@ -82,7 +98,7 @@ div#guidenav {
     }
 
     .thumb {
-      width: 49%;
+      width: 48.8%;
       display: inline-block;
       padding: 0;
       margin: 0;
@@ -94,6 +110,9 @@ div#guidenav {
   div#guidebody {
     width: 100%;
     margin: 0;
+    div.indent.black {
+      width: 90%;
+    }
   }
   .controls {
     float: none;
@@ -107,9 +126,13 @@ div#guidenav {
     li {
       min-width: unset;
       margin: 0;
-      width: 32.6%;
+      width: 32%;
       display: inline-block;
+      button {
+        text-align: left;
+      }
     }
+    margin-bottom: 0;
   }
   div#guidenav {
     width: 90%;
@@ -118,8 +141,9 @@ div#guidenav {
     display: inline-block;
     .thumb {
       margin: 0;
-      width: 32.6%;
+      width: 32%;
       display: inline-block;
+      opacity: 1;
     }
   }
 }
