Small changes and compadibility

--- a/sass/_guides.scss
+++ b/sass/_guides.scss
@@ -137,6 +137,7 @@ div#guidenav {
   div#guidenav {
     width: 90%;
     margin-left: 5%;
+    margin-bottom: 20px;
     float: none;
     display: inline-block;
     .thumb {
