--- a/templates/macros.html
+++ b/templates/macros.html
@@ -10,11 +10,16 @@
     <div class="two-thirds">{{ g.description | nl2br | safe }}</div>
     <div class="controls">
       <ul class="guide-controls">
-        <li><button onclick='playFilm("flat.{{g.slug}}")'><i class="fas fa-play-circle"></i> Meet Your Guide</button></li>
-        <li><button onclick='playFilm("dimensional.{{g.slug}}")'>
+        <li><button onclick='playFilm("flat.{{g.slug}}")'
+               ontouchstart='playFilm("flat.{{g.slug}}")'>
+            <i class="fas fa-play-circle"></i> Meet Your Guide</button></li>
+        <li><button onclick='playFilm("dimensional.{{g.slug}}")'
+               ontouchstart='playFilm("dimensional.{{g.slug}}")'>
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 85.5 83"><defs><style>.cls-1{fill:none;stroke-miterlimit:10;stroke-width:8px;}</style></defs><ellipse class="everglade" cx="44.25" cy="40.75" rx="17.25" ry="17.75"/><path class="cls-1 everglade" d="M11.66,55.5a37.49,37.49,0,1,0,.2-15" transform="translate(-4.5 -7)"/><polygon class="everglade" points="7.75 41.15 0 52 15.5 52 7.75 41.15"/></svg>
             360&deg; Landscape</button></li>
-        <li><button onclick='openMap({{g.mapdata | dump}})'><i class="fas fa-map-marker-alt"></i> Map</button></li>
+        <li><button onclick='openMap({{g.mapdata | dump}})'
+               ontouchstart='openMap({{g.mapdata | dump}})'>
+            <i class="fas fa-map-marker-alt"></i> Map</button></li>
       </ul>
     </div>
   </div>
