--- a/sass/_constants.scss
+++ b/sass/_constants.scss
@@ -1,9 +1,10 @@
 $black: #111;
 $grey: #CCCCCC;
 $white: #FFFFFF;
-$nepal: #98B4C2;
+//$nepal: #98B4C2;
 //$everglade: #839B12;
 $everglade: #D9D269;
+$nepal: #D9D269;
 $lightgreen: #B4C75E;
 
 @import url('https://fonts.googleapis.com/css?family=IM+Fell+Double+Pica');
