--- a/sass/master.scss
+++ b/sass/master.scss
@@ -218,6 +218,10 @@ body {
 
 @media (max-width: 767px) {
 
+  .overlay div.popup {
+    margin-top: 25px;
+  }
+
   #play-trailer {
     font-size: 36px;
     left: calc(50% - 18px);
