--- a/templates/guides.html
+++ b/templates/guides.html
@@ -25,6 +25,7 @@
   {% for i in range(1, guides.length + 1) %}
     <img src="/dist/images/1.{{i}}_Guide_Thumbnail.jpg"
       onclick="selectGuide('{{guides[i-1].slug}}')"
+      ontouchstart="selectGuide('{{guides[i-1].slug}}')"
       class="thumb"/>
   {% endfor %}
 </div>
