--- a/templates/landing.html
+++ b/templates/landing.html
@@ -7,7 +7,7 @@
 
 {% block body %}
 {{ image('0.0.jpg') }}
-<button id="play-trailer" onclick="playFilm('trailer')"><i class="fas fa-play-circle"></i></button>
+<button id="play-trailer" onclick="playFilm('trailer')" class="fas fa-play-circle"></button>
 <div id="first-copy">
   <p>{{ home['0.2'] }}</p>
 </div>
