--- a/sass/master.scss
+++ b/sass/master.scss
@@ -53,7 +53,7 @@ div.indent {
           text-align: center;
 
           &.tab-buttons-active {
-            background-color: $nepal;
+            background-color: #fcc90f;
             color: black;
           }
           &:hover {
@@ -180,7 +180,7 @@ body {
   transition: opacity 500ms;
   visibility: hidden;
   opacity: 0;
-  padding: 60px 5%;
+  padding: 20px 5% 60px 5%;
 
   &.up {
     visibility: visible;
@@ -229,6 +229,7 @@ body {
   #play-trailer {
     font-size: 36px;
     left: calc(50% - 25px);
+    top: 35%;
   }
   div#first-copy {
     position: static;
@@ -261,5 +262,24 @@ body {
         margin-top: 5px;
       }
     }
+  }
+}
+
+.juxtapose {
+  min-height: 50px;
+  position: relative;
+  top: -40px;
+
+  &::before {
+    font-family: $display;
+    font-size: 25px;
+    color: white;
+    content: 'Loading';
+    position: relative;
+    top: 50px;
+    background-color: grey;
+    display: block;
+    text-align: center;
+    padding: 10px 0;
   }
 }
